--- a/src/pages/scan-to-redeem/scan-to-redeem.css
+++ b/src/pages/scan-to-redeem/scan-to-redeem.css
@@ -14,6 +14,7 @@
   color: #414141;
   padding-top: 8px;
   padding-bottom: 25px;
+  line-height: 32px;
 }
 .invite-section .scan-reward {
   margin: 10px 0px 30px 0px;
