--- a/src/components/order-time/index.css
+++ b/src/components/order-time/index.css
@@ -16,6 +16,8 @@ label.time-picker:focus-within {
   border-radius: 0 !important;
   letter-spacing: 2.25px !important;
   font-size: 13px;
+  display: flex;
+  justify-content: center;
 }
 .native-select .MuiNativeSelect-select {
   color: #fff;
