--- a/src/components/order-time/index.css
+++ b/src/components/order-time/index.css
@@ -18,15 +18,17 @@ label.time-picker:focus-within {
   font-size: 13px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 .native-select .MuiNativeSelect-select {
   color: #fff;
   padding-right: 0px !important;
   text-align: center !important;
+  width: 100% !important;
 }
 .native-select .MuiNativeSelect-select option {
   color: #000;
-  padding: 5px 0;
+  margin: 0 auto !important;
 }
 .native-select.MuiInputBase-root.MuiInput-root {
   margin-top: 0px !important;
