--- a/src/components/order-time/index.css
+++ b/src/components/order-time/index.css
@@ -22,9 +22,7 @@ label.time-picker:focus-within {
 }
 .native-select .MuiNativeSelect-select {
   color: #fff;
-  padding-right: 0px !important;
-  text-align: center !important;
-  width: 100% !important;
+  padding-left: 15px !important;
 }
 .native-select .MuiNativeSelect-select option {
   color: #000;
