--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -1,6 +1,5 @@
 .product-detail {
-  padding: 60px 0px;
-  max-width: 1090px;
+  padding: 60px 100px;
   box-sizing: border-box;
   margin: auto;
 }
@@ -241,6 +240,9 @@ input[type='check']:checked + label {
     overflow-wrap: break-word;
     text-align: center;
     font-size: 14px;
+  }
+  .product-detail {
+    padding: 40px 20px;
   }
   .quantity-label {
     display: none;
