--- a/src/components/iframe/product-listing/index.css
+++ b/src/components/iframe/product-listing/index.css
@@ -9,7 +9,19 @@
 .react-multi-carousel-list {
   /*display: block !important;*/
 }
-
+.react-multi-carousel-list.carousel-container  button.react-multiple-carousel__arrow--left,
+.react-multi-carousel-list.carousel-container  button.react-multiple-carousel__arrow--right {
+  background: #2b4b62 !important;
+  border-radius: 30px !important;
+  width: 50px;
+  height: 50px;
+}
+.react-multi-carousel-list.carousel-container  button.react-multiple-carousel__arrow--left:before,
+.react-multi-carousel-list.carousel-container  button.react-multiple-carousel__arrow--right:before {
+  color: white !important;
+  font-size: 38px;
+  font-weight: bold;
+}
 .carousel-container .title {
   min-height: 45px;
 }
