--- a/src/components/gift-cards/index.css
+++ b/src/components/gift-cards/index.css
@@ -1,6 +1,7 @@
 .gift-cards-panel {
   padding-top: 25px;
   max-width: 820px;
+  padding-left: 25px;
 }
 
 .gift-cards-panel .card-panel {
@@ -10,6 +11,8 @@
   box-sizing: border-box;
   position: relative;
   box-shadow: none;
+  margin-left: -25px;
+  margin-right: 25px;
 }
 
 .gift-cards-panel .card-panel .panel {
@@ -33,7 +36,7 @@
   padding-top: 20px;
 }
 .gift-cards-panel .card-panel .order-Link a,
-.gift-cards-panel .card-panel .order-Link button {    
+.gift-cards-panel .card-panel .order-Link button {
   font-size: 15px;
   display: block;
   color: #b9b9b9;
@@ -43,8 +46,8 @@
   padding-left: 15px;
   font-weight: 600;
  }
-  
-.gift-cards-panel .card-panel .order-Link button.default {   
+
+.gift-cards-panel .card-panel .order-Link button.default {
   color: #0075BF;
 }
 
