--- a/src/pages/redeem-reward/redeem-reward.css
+++ b/src/pages/redeem-reward/redeem-reward.css
@@ -29,9 +29,15 @@
   text-align: left !important;
   color: #2b4b62;
   padding: 10px 10px 10px 20px;
-  line-height: 1.2;
   letter-spacing: normal;
-  display: block;
+  max-height: 60px;
+  display: -webkit-box;
+  min-height: 25px;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  line-height: 1.3;
 }
 
 @media screen and (max-width: 900px) {
