--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -429,7 +429,7 @@ input[type='check']:checked + label {
   .card-panel
   .name-img-panel
   .name-panel {
-  padding-left: 20px;
+  /* padding-left: 16px; */
   color: #2b4b62;
 }
 
@@ -440,7 +440,7 @@ input[type='check']:checked + label {
   .name-img-panel
   .name-panel.custom-class {
   color: #e58734;
-  margin-left: -49px;
+  margin-left: -103px;
   /* position: absolute;
   width: 100%;
   left: 60%;
@@ -458,7 +458,8 @@ input[type='check']:checked + label {
   width: 100%;
   /* margin: 0 auto; */
   left: 60%;
-  margin-left: -61px;
+  margin-left: -122px;
+  text-align: center;
 }
 
 .product-detail
