--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -7,6 +7,12 @@
         padding-left: 10px;
       }
 
+@media screen and (min-width: 900px){
+    .footer-control{
+    margin-bottom: 130px !important;
+    }
+}
+
 @media screen and (max-width: 900px) {
     .list
     {
