--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -27,4 +27,11 @@
   .footer-control {
     margin-bottom: 175px !important;
   }
+   
+}
+
+@media screen and (min-Width: 550px) {
+    .footer-control .listsetting{
+        margin-right: 20px !important;
+    }
 }
