RW-666 Fixed clicking issue on select

--- a/src/pages/iframe/register/register.css
+++ b/src/pages/iframe/register/register.css
@@ -46,7 +46,7 @@
     font-size: 28px;
   }
   .sign-up-section .MuiSelect-select {
-    max-width: 195px !important;
+    /*max-width: 195px !important;*/
   }
 }
 
