--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -260,7 +260,7 @@ input[type='check']:checked+label {
     padding-bottom: 0px;
   }
 
-  .product-detail .menu-items .content-panel.selected .card-panel .name-img-panel .name-panel.custom-class {
+  .product-detail .menu-items .content-panel.selected .card-panel.no-image-class .name-img-panel .name-panel {
     color: #e58734;
     position: relative !important;
     width: 100%;
@@ -271,7 +271,7 @@ input[type='check']:checked+label {
     text-align: center !important;
   }
 
-  .product-detail .menu-items .content-panel .card-panel .name-img-panel .name-panel.custom-class {
+  .product-detail .menu-items .content-panel .card-panel.no-image-class .name-img-panel .name-panel {
     position: relative !important;
     width: 100%;
     /* margin: 0 auto; */
@@ -449,23 +449,27 @@ input[type='check']:checked+label {
   color: #2b4b62;
 }
 
-.product-detail .menu-items .content-panel.selected .card-panel .name-img-panel .name-panel.custom-class {
+.product-detail .menu-items .content-panel.selected .card-panel.no-image-class .name-img-panel .name-panel {
   color: #e58734;
   margin-left: -103px;
-  /* position: absolute;
-    width: 100%;
-    left: 60%;
-    margin-left: -60px;
-    text-align: center; */
+  position: inherit;
+}
+
+.product-detail .menu-items .content-panel .card-panel.no-image-class .name-img-panel .name-panel .options-cals-price {
+  justify-content: center;
+}
+
+.product-detail .menu-items .content-panel .card-panel.no-image-class .name-img-panel {
+  justify-content: center;
 }
 
 
-.product-detail .menu-items .content-panel .card-panel .name-img-panel .name-panel.custom-class {
+.product-detail .menu-items .content-panel .card-panel.no-image-class .name-img-panel .name-panel {
   position: absolute;
   width: 100%;
   /* margin: 0 auto; */
-  left: 60%;
-  margin-left: -122px;
+  /*left: 60%;*/
+  /*margin-left: -122px;*/
   text-align: center;
 }
 
