--- a/src/pages/product/product.css
+++ b/src/pages/product/product.css
@@ -4,11 +4,17 @@
   margin: auto;
 }
 
-h2.heading-ui {
+legend.heading-ui, h2.heading-ui {
   font-size: 24px;
   font-family: 'Poppins-Bold', sans-serif !important;
   color: #214f66;
   text-transform: uppercase;
+}
+
+fieldset.field-set {
+border: 0 !important;
+box-shadow: none !important;
+margin-bottom: 20px;
 }
 
 .product-detail h2.heading {
@@ -76,7 +82,7 @@ input[type='check']:checked+label {
   z-index: 1000;
 }
 
-.product-detail h3 {
+.product-detail h3, legend.heading-ui.h3 {
   text-transform: uppercase;
   color: #0069aa;
   font-weight: 500;
