--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -5,6 +5,8 @@
         list-style: none;
         grid-template-columns: auto auto auto auto auto auto auto auto;
         padding-left: 10px;
+        /* padding-left: -webi; */
+        text-align: -webkit-left;
       }
 
 .footer-setting{
