--- a/src/components/order-time/index.css
+++ b/src/components/order-time/index.css
@@ -44,8 +44,9 @@ label.time-picker:focus-within {
 }
 .MuiButtonBase-root.MuiPickersDay-root:focus,
 .MuiButtonBase-root.MuiPickersDay-root:hover {
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: #214F66 !important;
+  color: #fff;
 }
 .MuiButtonBase-root.MuiPickersDay-root:focus.Mui-selected {
-  background-color: rgb(0, 73, 118);
+  background-color: #0073BD;
 }
