ADA - Issue Fix
ADA - Issue Fix

--- a/src/components/rewards/rewards.css
+++ b/src/components/rewards/rewards.css
@@ -50,7 +50,7 @@
   display: block;
   width: 10px;
   height: 22px;
-  border: solid #fff;
+  border: solid #0f0f0f;
   border-width: 0 5px 5px 0;
   position: absolute;
   left: 50%;
