--- a/src/components/rewards/rewards.css
+++ b/src/components/rewards/rewards.css
@@ -42,7 +42,7 @@
   text-align: left;
 }
 .choose-reward .choose-btn.Mui-selected {
-  border: 2px solid #e58530 !important;
+  border: 2px solid #0073BD !important;
   background: transparent;
 }
 .choose-reward .choose-btn.Mui-selected:after {
@@ -50,7 +50,7 @@
   display: block;
   width: 10px;
   height: 22px;
-  border: solid #0f0f0f;
+  border: solid #fff;
   border-width: 0 5px 5px 0;
   position: absolute;
   left: 50%;
@@ -62,7 +62,7 @@
 .choose-reward .choose-btn.Mui-selected:before {
   content: " ";
   display: block;
-  border: solid 25px #e58530;
+  border: solid 25px #0073BD;
   border-radius: 45px;
   height: 0px;
   width: 0px;
