ADA - Issue Fixes
ADA - Issue Fixes

--- a/src/components/rewards/rewards.css
+++ b/src/components/rewards/rewards.css
@@ -109,7 +109,7 @@
   .choose-reward .choose-btn.Mui-selected:before {
     margin-top: -15%;
     margin-left: -13%;
-    border: solid 37px #e58530;
+    border: solid 37px #0073BD;
   }
   .choose-reward .choose-btn.Mui-selected:after {
     margin-top: -10%;
