--- a/src/components/payment-info/payment-info.css
+++ b/src/components/payment-info/payment-info.css
@@ -125,8 +125,9 @@ input[type=number] {
 /* The Modal (background) */
 .modal {
   position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  z-index: 9999; /* Sit on top */
+  padding-top: 10%; /* Location of the box */
+  margin-bottom: 10%; /* Location of the box */
   left: 0;
   top: 0;
   width: 100%; /* Full width */
@@ -134,6 +135,23 @@ input[type=number] {
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.add-credit-card-button {
+  border-radius: 0 !important;
+  letter-spacing: 2.25px !important;
+  font-family: 'Poppins-Medium' !important;
+  position: relative;
+  background-color: transparent;
+  outline: 0;
+  border: 0;
+  margin: 0;
+  cursor: pointer;
+  -webkit-appearance: none;
+  text-decoration: none;
+  font-weight: 500;
+  text-transform: uppercase;color: #0069aa;
+  font-size: 16px !important;
 }
 
 .modal.show {
@@ -150,7 +168,10 @@ input[type=number] {
   margin: auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
+  max-height: calc(100% - 64px);
+  max-width: 600px;
+  width: calc(100% - 64px);
+  border-radius: 4px;
 }
 
 /* The Close Button */
@@ -166,4 +187,24 @@ input[type=number] {
   color: #000;
   text-decoration: none;
   cursor: pointer;
+}
+
+.modal-header {
+  text-align: left;
+}
+
+.modal-footer {
+  text-align: right;
+}
+
+.modal-header .heading {
+  color: rgba(0, 0, 0, 0.87);
+  margin: 0;
+  font-family: "Roboto","Helvetica","Arial",sans-serif !important;
+  font-weight: 500;
+  font-size: 1.25rem !important;
+  line-height: 1.6;
+  letter-spacing: 0.0075em;
+  padding: 0px 0px 16px 0px;
+  flex: 0 0 auto;
 }
