--- a/src/pages/reward-new/detail/index.css
+++ b/src/pages/reward-new/detail/index.css
@@ -2,8 +2,9 @@
   border-radius: 0px;
   border: 1px solid #c6c6c6;
   box-shadow: 0px 4px 5px 0px rgb(0 0 0 / 20%);
-  height: 150px;
-  width: 150px;
+  height: 140px;
+  width: 140px;
+  padding: 12px;
 }
 .p-detail {
   font-family: 'Poppins-Regular', sans-serif !important;
